--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest blog post workflow
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: "0 * * * *"
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          max_post_count: '4'
-          feed_list: 'https://dev.to/feed/blendit4ent, https://edgar-dominik-herren.vercel.app/rss.xml'
+          max_post_count: "8"
+          feed_list: "https://dev.to/feed/blendit4ent, https://edgar-dominik-herren.vercel.app/rss.xml"
